--- a/crayon/pubspec.yaml
+++ b/crayon/pubspec.yaml
@@ -29,13 +29,20 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  flutter_localizations: # Add this line
+    sdk: flutter
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  firebase_core: ^1.7.0
+  firebase_auth: ^3.1.3
+  cloud_firestore: ^2.5.3
+  firebase_storage: ^10.0.5
   cupertino_icons: ^1.0.2
   provider: ^6.0.1
   timeline_tile: ^2.0.0
   shared_preferences: ^2.0.8
+  validators: ^3.0.0
+  dartz: ^0.10.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -56,7 +63,11 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
+  assets:
+    - assets/images/
+    - assets/language/de.json
+    - assets/language/fr.json
+    - assets/language/en.json
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
