--- a/crayon/pubspec.yaml
+++ b/crayon/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   shared_preferences: ^2.0.8
   validators: ^3.0.0
   dartz: ^0.10.0
+  qr_code_scanner: ^0.6.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
