--- a/crayon/pubspec.yaml
+++ b/crayon/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   validators: ^3.0.0
   dartz: ^0.10.0
   qr_code_scanner: ^0.6.1
+  connectivity: ^3.0.6
 dev_dependencies:
   flutter_test:
     sdk: flutter
