--- a/crayon/pubspec.yaml
+++ b/crayon/pubspec.yaml
@@ -29,6 +29,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  sqflite:
   flutter_localizations: # Add this line
     sdk: flutter
   # The following adds the Cupertino Icons font to your application.
