--- a/crayon/android/app/src/main/AndroidManifest.xml
+++ b/crayon/android/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
   <uses-permission android:name="android.permission.INTERNET" />
   <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
    <application
-        android:label="crayon"
+        android:label="Crayon"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
